2017-10-03  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Modify focusItem. This function use attribute instead of class.
	Define removeAttrs function.
	Remove restoreAllClass function.
	Modify this file. This file use removeAttrs instead of restoreAllClass.
	Modify resetPrev function.
	Define dummyItem and dummyItems constans.
	Modify genericListener.listeners.setStyle. This function use attribute
	instead of class.


	* test/unit_test/jasmine/spec/spec.js:
	Define removeAttrFromItem function.
	Define removeAttrFromItems function.

	* tryXpath/scripts/try_xpath_content.js:
	Modify genericListener.listeners.execute function.
	Define focusedItem variable.
	Define focusedAncestorItems variable.
	Set empty string to initial value of some variables.

	* tryXpath/scripts/try_xpath_functions.js:
	Define setAttrToItem function.
	Define setIndexToItems function.

	* tryXpath/scripts/try_xpath_content.js:
	Define attributes variable.

2017-10-02  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Change version from "1.0" to "1.0.0".

	* tryXpath/scripts/try_xpath_functions.js:
	Fix getItemDetails function. This function handle Boolean type.

2017-10-01  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Modify window load event handler. A execute message is sent when a
	user press the Enter to the some input field.

	* tryXpath/scripts/try_xpath_content.js: 
	Add the MPL 2.0 Licence header.
	Move the code which calls chrome.runtime.sendMessage.

	* tryXpath/popup/popup.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/pages/show_all_results.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/pages/options.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/background/try_xpath_background.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/scripts/try_xpath_functions.js:
	Add the MPL 2.0 Licence header.

2017-09-29  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.css:
	Set style to #open-options.
