@@ -1,3 +1,14 @@
+2017-10-04  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/background/try_xpath_background.js:
+	Remove genericListener.listeners.loadClasses function.
+	Remove attributes variable.
+
+	* tryXpath/scripts/try_xpath_content.js:
+	Define genericListener.listeners.setContextInfo function.
+	Modify this file. This file send requestRestorePopupState event
+	instead of loadClasses event.
+
 2017-10-03  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/scripts/try_xpath_content.js:
